fixed the alignment of the next and previous buttons

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,7 +108,6 @@ p
 {
 	margin-left: 800px;
 	display: inline-block;
-
 }
 .line
 {
@@ -119,9 +118,24 @@ select
 {
 	width: 150px;
 }
-button
+.next_button
 {
-	margin-left: 900px;
-	margin-top: 20px;
+	margin-top: 80px;
+	margin-left: 400px;
+	position: absolute;
+	display: inline-block;
+
+}
+.prev_button
+{
+	margin-top: 70px;
+	margin-left: -650px;
+	display: inline-block;
+	position: absolute;
+
+}
+textarea
+{
+	margin-left: 380px;
 	display: block;
 }
